settings, modal, router,

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 	<!--<link rel="stylesheet" href="lib/angular-1.2.29/angular-csp.css">
 	<link rel="stylesheet" href="lib/bootstrap-3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style/common.css">-->
-<link rel="shortcut icon" href="/public/favicon.ico"><link href="/public/style/index.css?c5a13e3a0ffa8f37d7fd" rel="stylesheet"></head>
+<link rel="shortcut icon" href="/public/favicon.ico"><link href="/public/style/index.css?49060779f20df7883be6" rel="stylesheet"></head>
 
 <body ng-controller="mainController">
 
@@ -31,8 +31,8 @@
 		<div class="loader text-center"><span translate="loading"></span></div>
 	</div>
 
-	<script src="lib/requirejs-2.2.0/require.min.js"></script>
-	<script src="script/loader.js"></script>
-<script type="text/javascript" src="/public/script/common.js?c5a13e3a0ffa8f37d7fd"></script><script type="text/javascript" src="/public/script/index.js?c5a13e3a0ffa8f37d7fd"></script></body>
+	<script src="./lib/requirejs-2.2.0/require.min.js"></script>
+	<script src="./script/loader.js"></script>
+<script type="text/javascript" src="/public/script/common.js?49060779f20df7883be6"></script><script type="text/javascript" src="/public/script/index.js?49060779f20df7883be6"></script></body>
 
 </html>
