--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
 		<div class="loader text-center"><span translate="loading"></span></div>
 	</div>
 
-	<script src="lib/requirejs-2.2.0/require.min.js"></script>
-	<script src="script/loader.js"></script>
+	<script src="./lib/requirejs-2.2.0/require.min.js"></script>
+	<script src="./script/loader.js"></script>
 </body>
 
 </html>
